k8s/userprofile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripsinsights-userprofile
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripsinsights-userprofile
